mbtocs should not truncate input

Fixes pasting more than 1024 bytes into xterm, as described in
https://bugs.freedesktop.org/show_bug.cgi?id=25209

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>